Fixed a weird cutoff bug with last commit

--- a/personal-website/src/components/Header/Header.module.css
+++ b/personal-website/src/components/Header/Header.module.css
@@ -89,4 +89,10 @@ a:focus-visible .icon {
 
 .github:hover .icon {
   color: #181717;
-} /* 
+} /* GitHub black   */
+.linkedin:hover .icon {
+  color: #0a66c2;
+} /* LinkedIn blue  */
+.gmail:hover .icon {
+  color: #ea4335;
+} /* Gmail red      */
